# paperead

./: .gitignore  README.md  buildcox.py  psakefile.ps1  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: .paperead.yml
docs/builtins/: description.md
docs/builtins/notes/: home.md
docs/demo/: description.md
docs/demo/notes/: dynamic.md  html.md  media-audio.md  media-link.md  media-video.md  raw.md  slides.md
docs/dynamic/: description.md
docs/getting-started/: description.md
docs/getting-started/notes/: cli.md  configuration.md  data.md  install.md  server.md
docs/home/: description.md
docs/html/: description.md
docs/html/notes/: markdown.md
docs/markdown/: description.md
docs/markdown/notes/: graph.md
docs/media/: description.md
docs/media/notes/: images.md  pdf.md  va.md
docs/slides/: description.md
docs/writing/: description.md
docs/writing/notes/: dynamic.md  html.md  media.md  raw.md  slides.md
src/: MANIFEST.in  requirements.txt  setup.cfg
src/main/: MANIFEST.in  requirements.txt  setup.cfg
src/main/paperead/: __init__.py  __main__.py  env.py  fsutils.py
src/main/paperead/repository/: __init__.py  base.py  materials.py  notes.py  schema.py
src/main/paperead/server/: __init__.py  __main__.py  entrypoint.py  frontend.py  markdown.py  run.py  static.py
src/main/paperead/server/api/: __init__.py  materials.py  notes.py
src/paperead/: __init__.py  __main__.py  env.py  fsutils.py
src/web/: README.md  index.html  package-lock.json  package.json  restore.ps1  vite.config.ts
(+67 files in other folders)
