[metadata]
name = paperead
version = attr: paperead.__version__
author = StardustDL
author_email = stardustdl@163.com
description = A tiny tool to present and manage your reading and notes.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/StardustDL/paperead
project_urls =
    Source Code = https://github.com/StardustDL/paperead
    Changes = https://github.com/StardustDL/paperead/releases
    Documentation = https://github.com/StardustDL/paperead
    Bug Tracker = https://github.com/StardustDL/paperead/issues
classifiers =
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Utilities

[options]
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires = 
    click>=8.1.3
    Flask>=2.1.2
    flask-cors>=3.0.10
    Flask-BasicAuth>=0.2.0
    PyYaml>=6.0
    python-dateutil>=2.8.2
    tornado>=6.1
    marko>=1.2.0

[options.entry_points]
console_scripts =
    paperead = paperead.__main__:main